# jmp-homepage

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  wsgi.py
notebooks/: cp.ipynb  largest.ipynb  ovito.ipynb  reduce_data.ipynb  render.ipynb  small_idxs.npy  structure.cif
scripts/: render-all.py
src/jmphome/: home.py  test.py  tsne.py
