[project]
name = "jmp-homepage"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Nima Shoghi", email = "nimashoghi@gmail.com" }]
requires-python = "== 3.11"
dependencies = ["crystal-toolkit"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jmp-homepage = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
plotly = ">=5.21.0,<5.22"
numpy = ">=1.26.4,<1.27"
dash = ">=2.16.1,<2.17"
pymatgen = ">=2024.4.13,<2024.5"
seaborn = ">=0.13.2,<0.14"
matplotlib = ">=3.8.4,<3.9"
pandas = ">=2.2.2,<2.3"
