[project]
name = "jmp-homepage"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Nima Shoghi", email = "nimashoghi@gmail.com" }]
requires-python = "== 3.10.14"
dependencies = [
    "crystal-toolkit",
    "ipykernel",
    "ipywidgets",
    "nglview",
    "plotly",
    "numpy",
    "dash",
    "pymatgen",
    "seaborn",
    "matplotlib",
    "pandas",
    "gunicorn",
    "ovito",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jmp-homepage = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
